2000-08-08  Peter Williams  <peterw@helixcode.com>

	* Makefile.am (SUBDIRS): Reenable the calendar. Oops.

2000-08-05  Dan Winship  <danw@helixcode.com>

	* tools/verify-evolution-install.sh: Look for oafinfo files in
	oaf's prefix, not gnome-libs's. Allow binaries to be installed
	anywhere in $PATH.

	* configure.in, README: Update the README and the text of the
	Bonobo configure check to match reality. Remove the 0.15 vs
	0.15-and-a-half check since we require post-0.16 now.

2000-08-03  JP Rosevear  <jpr@helixcode.com>

	* configure.in: Remove gconf check

2000-08-03 Alastair McKinstry <mckinstry@computer.org>

	* configure.in (ALL_LINGUAS): Add Irish translation

2000-08-02  Michael Meeks  <michael@helixcode.com>

	* configure.in: update for BonoboX

2000-08-02  Dan Winship  <danw@helixcode.com>

	* configure.in (AC_OUTPUT): Add camel/providers/nntp

2000-08-02  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c: Made clicking choose the right
	character even if show_borders is on.

2000-08-01  Dan Winship  <danw@helixcode.com>

	* configure.in, acconfig.h: Add checks for GPG, PGP 5 and PGP 2.
	Only record the first one found.

2000-08-01  Damon Chaplin  <damon@helixcode.com>

	* configure.in (AC_OUTPUT): removed calendar/doc/*

2000-08-01  Not Zed  <NotZed@HelixCode.com>

	* configure.in: Added mh provider.

2000-07-27  Dan Winship  <danw@helixcode.com>

	* configure.in: Check for gconf_client_get_default (gconf 0.5 vs
	newer)

2000-07-26  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Bump version number to 0.3.

2000-07-26  Peter Williams  <peterw@helixcode.com>

	* widgets/e-table/e-table-scrolled.c (right_click_proxy): Default
	the return value to 0.

2000-07-25  Dan Winship  <danw@helixcode.com>

	* configure.in: some unrelated changes: check for mkdtemp,
	gnome_vfs_mime_get_default_action_without_fallback, and a
	setuid/setgid movemail binary.

	* acconfig.h: add MOVEMAIL_PATH
