@@ -592,10 +592,3 @@ doc/devel/Makefile
 doc/devel/calendar/Makefile
 doc/devel/calendar/cal-client/Makefile
 ])
-
-echo "WARNING WARNING WARNING WARNING WARNING WARNING WARNING"
-echo "*       Evolution should now compile but YMMV         *"
-echo "*       WRT whether it works or not, threaded         *"
-echo "*                      or not.                        *"
-echo "*  --enable-broken-threads is probably required now   *"
-echo "WARNING WARNING WARNING WARNING WARNING WARNING WARNING"
