@@ -1,3 +1,7 @@
+2000-08-09  Peter Williams  <peterw@helixcode.com>
+
+	* configure.in (EVOLUTION_DIR): Remove the warning about camel-async.
+
 2000-08-08  Peter Williams  <peterw@helixcode.com>
 
 	* Makefile.am (SUBDIRS): Reenable the calendar. Oops.
